# CybrScrape

./: Dockerfile  README.md  benchmarks.py  pyproject.toml  server.json  setup.cfg
agent-skill/: README.md
agent-skill/CybrScrape-Skill/: SKILL.md
agent-skill/CybrScrape-Skill/examples/: 01_fetcher_session.py  02_dynamic_session.py  03_stealthy_session.py  04_spider.py  README.md
agent-skill/CybrScrape-Skill/references/: mcp-server.md  migrating_from_beautifulsoup.md
agent-skill/CybrScrape-Skill/references/fetching/: choosing.md  dynamic.md  static.md  stealthy.md
agent-skill/CybrScrape-Skill/references/parsing/: adaptive.md  main_classes.md  selection.md
agent-skill/CybrScrape-Skill/references/spiders/: architecture.md  getting-started.md  proxy-blocking.md  requests-responses.md  sessions.md
cybrscrape/: __init__.py  cli.py  parser.py
cybrscrape/core/: _shell_signatures.py  ai.py  custom_types.py  mixins.py  shell.py  storage.py  translator.py
cybrscrape/core/utils/: _shell.py  _utils.py
cybrscrape/engines/: static.py
cybrscrape/engines/_browsers/: _base.py  _config_tools.py  _controllers.py  _page.py  _stealth.py  _types.py  _validators.py
cybrscrape/engines/toolbelt/: convertor.py  custom.py  fingerprints.py  navigation.py  proxy_rotation.py
cybrscrape/fetchers/: __init__.py  chrome.py  requests.py  stealth_chrome.py
cybrscrape/spiders/: __init__.py  checkpoint.py  engine.py  request.py  result.py  scheduler.py  session.py  spider.py
tests/ai/: test_ai_mcp.py
tests/cli/: test_cli.py  test_shell_functionality.py
tests/core/: test_shell_core.py  test_storage_core.py
tests/fetchers/: test_base.py  test_constants.py  test_impersonate_list.py  test_pages.py  test_proxy_rotation.py  test_response_handling.py  test_utils.py  test_validator.py
tests/fetchers/async/: test_dynamic.py  test_dynamic_session.py  test_requests.py  test_requests_session.py  test_stealth.py  test_stealth_session.py
tests/fetchers/sync/: test_dynamic.py  test_requests.py  test_requests_session.py  test_stealth_session.py
tests/parser/: test_adaptive.py  test_attributes_handler.py  test_general.py  test_parser_advanced.py
tests/spiders/: test_checkpoint.py  test_engine.py  test_request.py  test_result.py  test_scheduler.py  test_session.py  test_spider.py
